// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "clinical-lowlight-theme",
    }
  }
>
  <InjectIntl(DateInput)
    name="date-input"
    value="2000-07-04"
  >
    <DateInput
      dayAttributes={Object {}}
      disabled={false}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isA11yControlled={false}
      monthAttributes={Object {}}
      name="date-input"
      onBlur={null}
      onChange={null}
      useExternalFormatMask={false}
      value="2000-07-04"
      yearAttributes={Object {}}
    >
      <div
        aria-label="Terra.date.input.labelDefault"
        className="date-input clinical-lowlight-theme"
        role="group"
      >
        <div
          aria-live="polite"
        >
          <AccessibleValue
            readThis="Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey"
            value="2000-07-04"
          >
            <VisuallyHiddenText
              aria-hidden={false}
              text="Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey"
            >
              <span
                aria-hidden={false}
                className="visually-hidden-text"
              >
                Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey
              </span>
            </VisuallyHiddenText>
          </AccessibleValue>
        </div>
        <input
          name="date-input"
          type="hidden"
          value="2000-07-04"
        />
        <div
          className="month-select-wrapper"
        >
          <select
            aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
            aria-disabled={false}
            aria-label="Terra.date.input.monthSelectLabelWithDefaultName"
            className="month-select"
            disabled={false}
            name="terra-date-month-date-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            value="07"
          >
            <option
              value=""
            >
              Terra.date.input.monthPlaceholder
            </option>
            <option
              key="Terra.date.input.january"
              value="01"
            >
              Terra.date.input.january
            </option>
            <option
              key="Terra.date.input.february"
              value="02"
            >
              Terra.date.input.february
            </option>
            <option
              key="Terra.date.input.march"
              value="03"
            >
              Terra.date.input.march
            </option>
            <option
              key="Terra.date.input.april"
              value="04"
            >
              Terra.date.input.april
            </option>
            <option
              key="Terra.date.input.may"
              value="05"
            >
              Terra.date.input.may
            </option>
            <option
              key="Terra.date.input.june"
              value="06"
            >
              Terra.date.input.june
            </option>
            <option
              key="Terra.date.input.july"
              value="07"
            >
              Terra.date.input.july
            </option>
            <option
              key="Terra.date.input.august"
              value="08"
            >
              Terra.date.input.august
            </option>
            <option
              key="Terra.date.input.september"
              value="09"
            >
              Terra.date.input.september
            </option>
            <option
              key="Terra.date.input.october"
              value="10"
            >
              Terra.date.input.october
            </option>
            <option
              key="Terra.date.input.november"
              value="11"
            >
              Terra.date.input.november
            </option>
            <option
              key="Terra.date.input.december"
              value="12"
            >
              Terra.date.input.december
            </option>
          </select>
          <VisuallyHiddenText
            id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
            text="Terra.date.input.hotKey"
          >
            <span
              className="visually-hidden-text"
              id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
            >
              Terra.date.input.hotKey
            </span>
          </VisuallyHiddenText>
        </div>
        <AccessibleInput
          ariaDescribedBy={null}
          autoComplete="off"
          className="date-input-day"
          description="Terra.date.input.dayDescription, Terra.date.input.hotKey"
          disabled={false}
          isInvalid={false}
          label="Terra.date.input.dayInputLabel"
          maxLength="2"
          name="terra-date-day-date-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onPaste={[Function]}
          pattern="\\\\d*"
          refCallback={[Function]}
          showIsInvalid={true}
          size="2"
          type="text"
          value="04"
        >
          <VisuallyHiddenText
            id="00000000-0000-0000-0000-000000000000-label"
            text="Terra.date.input.dayInputLabel"
          >
            <span
              className="visually-hidden-text"
              id="00000000-0000-0000-0000-000000000000-label"
            >
              Terra.date.input.dayInputLabel
            </span>
          </VisuallyHiddenText>
          <Input
            aria-describedby="00000000-0000-0000-0000-000000000000-description"
            aria-disabled={false}
            aria-invalid={false}
            aria-labelledby="00000000-0000-0000-0000-000000000000-label"
            autoComplete="off"
            className="date-input-day"
            disabled={false}
            isIncomplete={false}
            isInvalid={false}
            maxLength="2"
            name="terra-date-day-date-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onPaste={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="2"
            type="text"
            value="04"
          >
            <input
              aria-describedby="00000000-0000-0000-0000-000000000000-description"
              aria-disabled={false}
              aria-invalid={false}
              aria-labelledby="00000000-0000-0000-0000-000000000000-label"
              autoComplete="off"
              className="form-input clinical-lowlight-theme date-input-day"
              disabled={false}
              maxLength="2"
              name="terra-date-day-date-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onPaste={[Function]}
              pattern="\\\\d*"
              required={false}
              size="2"
              type="text"
              value="04"
            />
          </Input>
          <VisuallyHiddenText
            aria-live="off"
            id="00000000-0000-0000-0000-000000000000-description"
            text="Terra.date.input.dayDescription, Terra.date.input.hotKey"
          >
            <span
              aria-live="off"
              className="visually-hidden-text"
              id="00000000-0000-0000-0000-000000000000-description"
            >
              Terra.date.input.dayDescription, Terra.date.input.hotKey
            </span>
          </VisuallyHiddenText>
        </AccessibleInput>
        <AccessibleInput
          ariaDescribedBy={null}
          autoComplete="off"
          className="date-input-year"
          description="Terra.date.input.yearDescription, Terra.date.input.hotKey"
          disabled={false}
          isInvalid={false}
          label="Terra.date.input.yearLabel"
          maxLength="4"
          name="terra-date-year-date-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onPaste={[Function]}
          pattern="\\\\d*"
          refCallback={[Function]}
          showIsInvalid={true}
          size="4"
          type="text"
          value="2000"
        >
          <VisuallyHiddenText
            id="00000000-0000-0000-0000-000000000000-label"
            text="Terra.date.input.yearLabel"
          >
            <span
              className="visually-hidden-text"
              id="00000000-0000-0000-0000-000000000000-label"
            >
              Terra.date.input.yearLabel
            </span>
          </VisuallyHiddenText>
          <Input
            aria-describedby="00000000-0000-0000-0000-000000000000-description"
            aria-disabled={false}
            aria-invalid={false}
            aria-labelledby="00000000-0000-0000-0000-000000000000-label"
            autoComplete="off"
            className="date-input-year"
            disabled={false}
            isIncomplete={false}
            isInvalid={false}
            maxLength="4"
            name="terra-date-year-date-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onPaste={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="4"
            type="text"
            value="2000"
          >
            <input
              aria-describedby="00000000-0000-0000-0000-000000000000-description"
              aria-disabled={false}
              aria-invalid={false}
              aria-labelledby="00000000-0000-0000-0000-000000000000-label"
              autoComplete="off"
              className="form-input clinical-lowlight-theme date-input-year"
              disabled={false}
              maxLength="4"
              name="terra-date-year-date-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onPaste={[Function]}
              pattern="\\\\d*"
              required={false}
              size="4"
              type="text"
              value="2000"
            />
          </Input>
          <VisuallyHiddenText
            aria-live="off"
            id="00000000-0000-0000-0000-000000000000-description"
            text="Terra.date.input.yearDescription, Terra.date.input.hotKey"
          >
            <span
              aria-live="off"
              className="visually-hidden-text"
              id="00000000-0000-0000-0000-000000000000-description"
            >
              Terra.date.input.yearDescription, Terra.date.input.hotKey
            </span>
          </VisuallyHiddenText>
        </AccessibleInput>
        <div
          aria-hidden={true}
          className="format-text"
        >
          (Terra.date.input.formatMonthDayYear)
        </div>
      </div>
    </DateInput>
  </InjectIntl(DateInput)>
</ThemeContextProvider>
`;

exports[`DateInput should not have duplicate ids on the page when multiple date inputs are initialized 1`] = `
<div
  intl="[object Object]"
>
  <div
    aria-label="Terra.date.input.labelDefault"
    class="date-input"
    role="group"
  >
    <div
      aria-live="polite"
    >
      <span
        aria-hidden="true"
        class="visually-hidden-text"
      >
        Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey
      </span>
    </div>
    <input
      name="date-input"
      type="hidden"
      value=""
    />
    <div
      class="month-select-wrapper"
    >
      <select
        aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
        aria-disabled="false"
        aria-label="Terra.date.input.monthSelectLabelWithDefaultName"
        class="month-select is-placeholder"
        name="terra-date-month-date-input"
      >
        <option
          selected=""
          value=""
        >
          Terra.date.input.monthPlaceholder
        </option>
        <option
          value="01"
        >
          Terra.date.input.january
        </option>
        <option
          value="02"
        >
          Terra.date.input.february
        </option>
        <option
          value="03"
        >
          Terra.date.input.march
        </option>
        <option
          value="04"
        >
          Terra.date.input.april
        </option>
        <option
          value="05"
        >
          Terra.date.input.may
        </option>
        <option
          value="06"
        >
          Terra.date.input.june
        </option>
        <option
          value="07"
        >
          Terra.date.input.july
        </option>
        <option
          value="08"
        >
          Terra.date.input.august
        </option>
        <option
          value="09"
        >
          Terra.date.input.september
        </option>
        <option
          value="10"
        >
          Terra.date.input.october
        </option>
        <option
          value="11"
        >
          Terra.date.input.november
        </option>
        <option
          value="12"
        >
          Terra.date.input.december
        </option>
      </select>
      <span
        class="visually-hidden-text"
        id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      >
        Terra.date.input.hotKey
      </span>
    </div>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label="Terra.date.input.dayInputLabel"
      autocomplete="off"
      class="form-input date-input-day"
      maxlength="2"
      name="terra-date-day-date-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.date.input.dayDescription, Terra.date.input.hotKey
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label="Terra.date.input.yearLabel"
      autocomplete="off"
      class="form-input date-input-year"
      maxlength="4"
      name="terra-date-year-date-input"
      pattern="\\\\d*"
      size="4"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.date.input.yearDescription, Terra.date.input.hotKey
    </span>
    <div
      aria-hidden="true"
      class="format-text"
    >
      (Terra.date.input.formatMonthDayYear)
    </div>
  </div>
  <div
    aria-label="Terra.date.input.labelDefault"
    class="date-input"
    role="group"
  >
    <div
      aria-live="polite"
    >
      <span
        aria-hidden="true"
        class="visually-hidden-text"
      >
        Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey
      </span>
    </div>
    <input
      name="date-input-2"
      type="hidden"
      value=""
    />
    <div
      class="month-select-wrapper"
    >
      <select
        aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
        aria-disabled="false"
        aria-label="Terra.date.input.monthSelectLabelWithDefaultName"
        class="month-select is-placeholder"
        name="terra-date-month-date-input-2"
      >
        <option
          selected=""
          value=""
        >
          Terra.date.input.monthPlaceholder
        </option>
        <option
          value="01"
        >
          Terra.date.input.january
        </option>
        <option
          value="02"
        >
          Terra.date.input.february
        </option>
        <option
          value="03"
        >
          Terra.date.input.march
        </option>
        <option
          value="04"
        >
          Terra.date.input.april
        </option>
        <option
          value="05"
        >
          Terra.date.input.may
        </option>
        <option
          value="06"
        >
          Terra.date.input.june
        </option>
        <option
          value="07"
        >
          Terra.date.input.july
        </option>
        <option
          value="08"
        >
          Terra.date.input.august
        </option>
        <option
          value="09"
        >
          Terra.date.input.september
        </option>
        <option
          value="10"
        >
          Terra.date.input.october
        </option>
        <option
          value="11"
        >
          Terra.date.input.november
        </option>
        <option
          value="12"
        >
          Terra.date.input.december
        </option>
      </select>
      <span
        class="visually-hidden-text"
        id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      >
        Terra.date.input.hotKey
      </span>
    </div>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label="Terra.date.input.dayInputLabel"
      autocomplete="off"
      class="form-input date-input-day"
      maxlength="2"
      name="terra-date-day-date-input-2"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.date.input.dayDescription, Terra.date.input.hotKey
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label="Terra.date.input.yearLabel"
      autocomplete="off"
      class="form-input date-input-year"
      maxlength="4"
      name="terra-date-year-date-input-2"
      pattern="\\\\d*"
      size="4"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.date.input.yearDescription, Terra.date.input.hotKey
    </span>
    <div
      aria-hidden="true"
      class="format-text"
    >
      (Terra.date.input.formatMonthDayYear)
    </div>
  </div>
  <div
    aria-label="Terra.date.input.labelDefault"
    class="date-input"
    role="group"
  >
    <div
      aria-live="polite"
    >
      <span
        aria-hidden="true"
        class="visually-hidden-text"
      >
        Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey
      </span>
    </div>
    <input
      name="date-input-3"
      type="hidden"
      value=""
    />
    <div
      class="month-select-wrapper"
    >
      <select
        aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
        aria-disabled="false"
        aria-label="Terra.date.input.monthSelectLabelWithDefaultName"
        class="month-select is-placeholder"
        name="terra-date-month-date-input-3"
      >
        <option
          selected=""
          value=""
        >
          Terra.date.input.monthPlaceholder
        </option>
        <option
          value="01"
        >
          Terra.date.input.january
        </option>
        <option
          value="02"
        >
          Terra.date.input.february
        </option>
        <option
          value="03"
        >
          Terra.date.input.march
        </option>
        <option
          value="04"
        >
          Terra.date.input.april
        </option>
        <option
          value="05"
        >
          Terra.date.input.may
        </option>
        <option
          value="06"
        >
          Terra.date.input.june
        </option>
        <option
          value="07"
        >
          Terra.date.input.july
        </option>
        <option
          value="08"
        >
          Terra.date.input.august
        </option>
        <option
          value="09"
        >
          Terra.date.input.september
        </option>
        <option
          value="10"
        >
          Terra.date.input.october
        </option>
        <option
          value="11"
        >
          Terra.date.input.november
        </option>
        <option
          value="12"
        >
          Terra.date.input.december
        </option>
      </select>
      <span
        class="visually-hidden-text"
        id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      >
        Terra.date.input.hotKey
      </span>
    </div>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label="Terra.date.input.dayInputLabel"
      autocomplete="off"
      class="form-input date-input-day"
      maxlength="2"
      name="terra-date-day-date-input-3"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.date.input.dayDescription, Terra.date.input.hotKey
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label="Terra.date.input.yearLabel"
      autocomplete="off"
      class="form-input date-input-year"
      maxlength="4"
      name="terra-date-year-date-input-3"
      pattern="\\\\d*"
      size="4"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.date.input.yearDescription, Terra.date.input.hotKey
    </span>
    <div
      aria-hidden="true"
      class="format-text"
    >
      (Terra.date.input.formatMonthDayYear)
    </div>
  </div>
</div>
`;

exports[`DateInput should render a date input with a default date 1`] = `
<div
  aria-label="Terra.date.input.labelDefault"
  className="date-input"
  role="group"
>
  <div
    aria-live="polite"
  >
    <AccessibleValue
      readThis="Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey"
      value="2000-07-04"
    />
  </div>
  <input
    name="date-input"
    type="hidden"
    value="2000-07-04"
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      aria-disabled={false}
      aria-label="Terra.date.input.monthSelectLabelWithDefaultName"
      className="month-select"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value="07"
    >
      <option
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
    <VisuallyHiddenText
      id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      text="Terra.date.input.hotKey"
    />
  </div>
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-day"
    description="Terra.date.input.dayDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.dayInputLabel"
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="2"
    type="text"
    value="04"
  />
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-year"
    description="Terra.date.input.yearDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.yearLabel"
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="4"
    type="text"
    value="2000"
  />
  <div
    aria-hidden={true}
    className="format-text"
  >
    (Terra.date.input.formatMonthDayYear)
  </div>
</div>
`;

exports[`DateInput should render a date input with custom attributes 1`] = `
<div
  aria-label="Terra.date.input.labelDefault"
  className="date-input"
  inputAttributes={
    Object {
      "id": "terra-date-input",
    }
  }
  role="group"
>
  <div
    aria-live="polite"
  >
    <AccessibleValue
      readThis="Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey"
    />
  </div>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      aria-disabled={false}
      aria-label="Terra.date.input.monthSelectLabelWithDefaultName"
      className="month-select is-placeholder"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
    <VisuallyHiddenText
      id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      text="Terra.date.input.hotKey"
    />
  </div>
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-day"
    description="Terra.date.input.dayDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.dayInputLabel"
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="2"
    type="text"
    value=""
  />
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-year"
    description="Terra.date.input.yearDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.yearLabel"
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="4"
    type="text"
    value=""
  />
  <div
    aria-hidden={true}
    className="format-text"
  >
    (Terra.date.input.formatMonthDayYear)
  </div>
</div>
`;

exports[`DateInput should render a date input with onBlur 1`] = `
<div
  aria-label="Terra.date.input.labelDefault"
  className="date-input"
  role="group"
>
  <div
    aria-live="polite"
  >
    <AccessibleValue
      readThis="Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey"
    />
  </div>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      aria-disabled={false}
      aria-label="Terra.date.input.monthSelectLabelWithDefaultName"
      className="month-select is-placeholder"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
    <VisuallyHiddenText
      id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      text="Terra.date.input.hotKey"
    />
  </div>
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-day"
    description="Terra.date.input.dayDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.dayInputLabel"
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="2"
    type="text"
    value=""
  />
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-year"
    description="Terra.date.input.yearDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.yearLabel"
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="4"
    type="text"
    value=""
  />
  <div
    aria-hidden={true}
    className="format-text"
  >
    (Terra.date.input.formatMonthDayYear)
  </div>
</div>
`;

exports[`DateInput should render a date input with onChange 1`] = `
<div
  aria-label="Terra.date.input.labelDefault"
  className="date-input"
  role="group"
>
  <div
    aria-live="polite"
  >
    <AccessibleValue
      readThis="Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey"
    />
  </div>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      aria-disabled={false}
      aria-label="Terra.date.input.monthSelectLabelWithDefaultName"
      className="month-select is-placeholder"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
    <VisuallyHiddenText
      id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      text="Terra.date.input.hotKey"
    />
  </div>
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-day"
    description="Terra.date.input.dayDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.dayInputLabel"
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="2"
    type="text"
    value=""
  />
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-year"
    description="Terra.date.input.yearDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.yearLabel"
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="4"
    type="text"
    value=""
  />
  <div
    aria-hidden={true}
    className="format-text"
  >
    (Terra.date.input.formatMonthDayYear)
  </div>
</div>
`;

exports[`DateInput should render a date input with onFocus 1`] = `
<div
  aria-label="Terra.date.input.labelDefault"
  className="date-input"
  role="group"
>
  <div
    aria-live="polite"
  >
    <AccessibleValue
      readThis="Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey"
    />
  </div>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      aria-disabled={false}
      aria-label="Terra.date.input.monthSelectLabelWithDefaultName"
      className="month-select is-placeholder"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
    <VisuallyHiddenText
      id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      text="Terra.date.input.hotKey"
    />
  </div>
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-day"
    description="Terra.date.input.dayDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.dayInputLabel"
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="2"
    type="text"
    value=""
  />
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-year"
    description="Terra.date.input.yearDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.yearLabel"
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="4"
    type="text"
    value=""
  />
  <div
    aria-hidden={true}
    className="format-text"
  >
    (Terra.date.input.formatMonthDayYear)
  </div>
</div>
`;

exports[`DateInput should render a default date input 1`] = `
<div
  aria-label="Terra.date.input.labelDefault"
  className="date-input"
  role="group"
>
  <div
    aria-live="polite"
  >
    <AccessibleValue
      readThis="Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey"
    />
  </div>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      aria-disabled={false}
      aria-label="Terra.date.input.monthSelectLabelWithDefaultName"
      className="month-select is-placeholder"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
    <VisuallyHiddenText
      id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      text="Terra.date.input.hotKey"
    />
  </div>
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-day"
    description="Terra.date.input.dayDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.dayInputLabel"
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="2"
    type="text"
    value=""
  />
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-year"
    description="Terra.date.input.yearDescription, Terra.date.input.hotKey"
    disabled={false}
    isInvalid={false}
    label="Terra.date.input.yearLabel"
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="4"
    type="text"
    value=""
  />
  <div
    aria-hidden={true}
    className="format-text"
  >
    (Terra.date.input.formatMonthDayYear)
  </div>
</div>
`;

exports[`DateInput should render a disabled time input 1`] = `
<div
  aria-label="Terra.date.input.labelDefault"
  className="disabled date-input"
  role="group"
>
  <div
    aria-live="polite"
  >
    <AccessibleValue
      readThis="Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey"
    />
  </div>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper disabled"
  >
    <select
      aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      aria-disabled={true}
      aria-label="Terra.date.input.monthSelectLabelWithDefaultName"
      className="month-select is-placeholder disabled"
      disabled={true}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
    <VisuallyHiddenText
      id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
      text="Terra.date.input.hotKey"
    />
  </div>
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-day"
    description="Terra.date.input.dayDescription, Terra.date.input.hotKey"
    disabled={true}
    isInvalid={false}
    label="Terra.date.input.dayInputLabel"
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="2"
    type="text"
    value=""
  />
  <AccessibleInput
    ariaDescribedBy={null}
    autoComplete="off"
    className="date-input-year"
    description="Terra.date.input.yearDescription, Terra.date.input.hotKey"
    disabled={true}
    isInvalid={false}
    label="Terra.date.input.yearLabel"
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPaste={[Function]}
    pattern="\\\\d*"
    refCallback={[Function]}
    showIsInvalid={true}
    size="4"
    type="text"
    value=""
  />
  <div
    aria-hidden={true}
    className="format-text"
  >
    (Terra.date.input.formatMonthDayYear)
  </div>
</div>
`;

exports[`DateInputField correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "clinical-lowlight-theme",
    }
  }
>
  <InjectIntl(DateInputField)
    legend="Legend text"
    name="date-input-value"
    value="2000-07-04"
  >
    <DateInputField
      dayAttributes={Object {}}
      disabled={false}
      error={null}
      help={null}
      hideRequired={false}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isIncomplete={false}
      isInline={false}
      isInvalid={false}
      isLegendHidden={false}
      legend="Legend text"
      legendAttributes={Object {}}
      monthAttributes={Object {}}
      name="date-input-value"
      required={false}
      showOptional={false}
      value="2000-07-04"
      yearAttributes={Object {}}
    >
      <fieldset
        className="date-input-field clinical-lowlight-theme"
      >
        <legend
          className="legend-group"
        >
          <div
            className="legend clinical-lowlight-theme"
          >
            Legend text
            <span
              className="error-icon-hidden"
            />
          </div>
        </legend>
        <InjectIntl(DateInput)
          a11yLabel="Legend text"
          aria-describedby="terra-date-input-field-description-error-00000000-0000-0000-0000-000000000000"
          dayAttributes={
            Object {
              "aria-describedby": "terra-date-input-field-description-help-00000000-0000-0000-0000-000000000000",
            }
          }
          disabled={false}
          error={null}
          isA11yControlled={true}
          isIncomplete={false}
          isInvalid={false}
          monthAttributes={
            Object {
              "aria-describedby": "terra-date-input-field-description-help-00000000-0000-0000-0000-000000000000",
            }
          }
          name="date-input-value"
          required={false}
          useExternalFormatMask={true}
          value="2000-07-04"
          yearAttributes={
            Object {
              "aria-describedby": "terra-date-input-field-description-help-00000000-0000-0000-0000-000000000000",
            }
          }
        >
          <DateInput
            a11yLabel="Legend text"
            aria-describedby="terra-date-input-field-description-error-00000000-0000-0000-0000-000000000000"
            dayAttributes={
              Object {
                "aria-describedby": "terra-date-input-field-description-help-00000000-0000-0000-0000-000000000000",
              }
            }
            disabled={false}
            error={null}
            intl={
              Object {
                "defaultFormats": Object {},
                "defaultLocale": "en",
                "formatDate": [Function],
                "formatHTMLMessage": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelative": [Function],
                "formatTime": [Function],
                "formats": Object {},
                "formatters": Object {
                  "getDateTimeFormat": [Function],
                  "getMessageFormat": [Function],
                  "getNumberFormat": [Function],
                  "getPluralFormat": [Function],
                  "getRelativeFormat": [Function],
                },
                "locale": "en",
                "messages": null,
                "now": [Function],
                "onError": [Function],
                "textComponent": "span",
                "timeZone": null,
              }
            }
            isA11yControlled={true}
            isIncomplete={false}
            isInvalid={false}
            monthAttributes={
              Object {
                "aria-describedby": "terra-date-input-field-description-help-00000000-0000-0000-0000-000000000000",
              }
            }
            name="date-input-value"
            onBlur={null}
            onChange={null}
            required={false}
            useExternalFormatMask={true}
            value="2000-07-04"
            yearAttributes={
              Object {
                "aria-describedby": "terra-date-input-field-description-help-00000000-0000-0000-0000-000000000000",
              }
            }
          >
            <div
              aria-describedby="terra-date-input-field-description-error-00000000-0000-0000-0000-000000000000"
              className="date-input clinical-lowlight-theme"
              error={null}
              role={null}
            >
              <div
                aria-live="polite"
              >
                <AccessibleValue
                  readThis="Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey"
                  value="2000-07-04"
                >
                  <VisuallyHiddenText
                    aria-hidden={false}
                    text="Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey"
                  >
                    <span
                      aria-hidden={false}
                      className="visually-hidden-text"
                    >
                      Terra.date.input.dateFormatLabel Terra.date.input.formatMonthDayYear. Invalid date, Terra.date.input.hotKey
                    </span>
                  </VisuallyHiddenText>
                </AccessibleValue>
              </div>
              <input
                name="date-input-value"
                type="hidden"
                value="2000-07-04"
              />
              <div
                className="month-select-wrapper"
              >
                <select
                  aria-describedby="00000000-0000-0000-0000-000000000000-hotkeyinstruction terra-date-input-field-description-error-00000000-0000-0000-0000-000000000000"
                  aria-disabled={false}
                  aria-invalid={false}
                  aria-label="Terra.date.input.monthSelectLabelWithName"
                  aria-required={false}
                  className="month-select"
                  disabled={false}
                  name="terra-date-month-date-input-value"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  value="07"
                >
                  <option
                    value=""
                  >
                    Terra.date.input.monthPlaceholder
                  </option>
                  <option
                    key="Terra.date.input.january"
                    value="01"
                  >
                    Terra.date.input.january
                  </option>
                  <option
                    key="Terra.date.input.february"
                    value="02"
                  >
                    Terra.date.input.february
                  </option>
                  <option
                    key="Terra.date.input.march"
                    value="03"
                  >
                    Terra.date.input.march
                  </option>
                  <option
                    key="Terra.date.input.april"
                    value="04"
                  >
                    Terra.date.input.april
                  </option>
                  <option
                    key="Terra.date.input.may"
                    value="05"
                  >
                    Terra.date.input.may
                  </option>
                  <option
                    key="Terra.date.input.june"
                    value="06"
                  >
                    Terra.date.input.june
                  </option>
                  <option
                    key="Terra.date.input.july"
                    value="07"
                  >
                    Terra.date.input.july
                  </option>
                  <option
                    key="Terra.date.input.august"
                    value="08"
                  >
                    Terra.date.input.august
                  </option>
                  <option
                    key="Terra.date.input.september"
                    value="09"
                  >
                    Terra.date.input.september
                  </option>
                  <option
                    key="Terra.date.input.october"
                    value="10"
                  >
                    Terra.date.input.october
                  </option>
                  <option
                    key="Terra.date.input.november"
                    value="11"
                  >
                    Terra.date.input.november
                  </option>
                  <option
                    key="Terra.date.input.december"
                    value="12"
                  >
                    Terra.date.input.december
                  </option>
                </select>
                <VisuallyHiddenText
                  id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
                  text="Terra.date.input.hotKey"
                >
                  <span
                    className="visually-hidden-text"
                    id="00000000-0000-0000-0000-000000000000-hotkeyinstruction"
                  >
                    Terra.date.input.hotKey
                  </span>
                </VisuallyHiddenText>
              </div>
              <AccessibleInput
                aria-describedby="terra-date-input-field-description-help-00000000-0000-0000-0000-000000000000"
                ariaDescribedBy="terra-date-input-field-description-error-00000000-0000-0000-0000-000000000000"
                autoComplete="off"
                className="date-input-day"
                description="Terra.date.input.dayDescription, Terra.date.input.hotKey"
                disabled={false}
                isIncomplete={false}
                isInvalid={false}
                label="Terra.date.input.dayInputLabel"
                maxLength="2"
                name="terra-date-day-date-input-value"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onPaste={[Function]}
                pattern="\\\\d*"
                refCallback={[Function]}
                required={false}
                showIsInvalid={true}
                size="2"
                type="text"
                value="04"
              >
                <VisuallyHiddenText
                  id="00000000-0000-0000-0000-000000000000-label"
                  text="Terra.date.input.dayInputLabel"
                >
                  <span
                    className="visually-hidden-text"
                    id="00000000-0000-0000-0000-000000000000-label"
                  >
                    Terra.date.input.dayInputLabel
                  </span>
                </VisuallyHiddenText>
                <Input
                  aria-describedby="00000000-0000-0000-0000-000000000000-description terra-date-input-field-description-error-00000000-0000-0000-0000-000000000000"
                  aria-disabled={false}
                  aria-invalid={false}
                  aria-labelledby="00000000-0000-0000-0000-000000000000-label"
                  autoComplete="off"
                  className="date-input-day"
                  disabled={false}
                  isIncomplete={false}
                  isInvalid={false}
                  maxLength="2"
                  name="terra-date-day-date-input-value"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onPaste={[Function]}
                  pattern="\\\\d*"
                  refCallback={[Function]}
                  required={false}
                  size="2"
                  type="text"
                  value="04"
                >
                  <input
                    aria-describedby="00000000-0000-0000-0000-000000000000-description terra-date-input-field-description-error-00000000-0000-0000-0000-000000000000"
                    aria-disabled={false}
                    aria-invalid={false}
                    aria-labelledby="00000000-0000-0000-0000-000000000000-label"
                    autoComplete="off"
                    className="form-input clinical-lowlight-theme date-input-day"
                    disabled={false}
                    maxLength="2"
                    name="terra-date-day-date-input-value"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onPaste={[Function]}
                    pattern="\\\\d*"
                    required={false}
                    size="2"
                    type="text"
                    value="04"
                  />
                </Input>
                <VisuallyHiddenText
                  aria-live="off"
                  id="00000000-0000-0000-0000-000000000000-description"
                  text="Terra.date.input.dayDescription, Terra.date.input.hotKey"
                >
                  <span
                    aria-live="off"
                    className="visually-hidden-text"
                    id="00000000-0000-0000-0000-000000000000-description"
                  >
                    Terra.date.input.dayDescription, Terra.date.input.hotKey
                  </span>
                </VisuallyHiddenText>
              </AccessibleInput>
              <AccessibleInput
                aria-describedby="terra-date-input-field-description-help-00000000-0000-0000-0000-000000000000"
                ariaDescribedBy="terra-date-input-field-description-error-00000000-0000-0000-0000-000000000000"
                autoComplete="off"
                className="date-input-year"
                description="Terra.date.input.yearDescription, Terra.date.input.hotKey"
                disabled={false}
                isIncomplete={false}
                isInvalid={false}
                label="Terra.date.input.yearLabel"
                maxLength="4"
                name="terra-date-year-date-input-value"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onPaste={[Function]}
                pattern="\\\\d*"
                refCallback={[Function]}
                required={false}
                showIsInvalid={true}
                size="4"
                type="text"
                value="2000"
              >
                <VisuallyHiddenText
                  id="00000000-0000-0000-0000-000000000000-label"
                  text="Terra.date.input.yearLabel"
                >
                  <span
                    className="visually-hidden-text"
                    id="00000000-0000-0000-0000-000000000000-label"
                  >
                    Terra.date.input.yearLabel
                  </span>
                </VisuallyHiddenText>
                <Input
                  aria-describedby="00000000-0000-0000-0000-000000000000-description terra-date-input-field-description-error-00000000-0000-0000-0000-000000000000"
                  aria-disabled={false}
                  aria-invalid={false}
                  aria-labelledby="00000000-0000-0000-0000-000000000000-label"
                  autoComplete="off"
                  className="date-input-year"
                  disabled={false}
                  isIncomplete={false}
                  isInvalid={false}
                  maxLength="4"
                  name="terra-date-year-date-input-value"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onPaste={[Function]}
                  pattern="\\\\d*"
                  refCallback={[Function]}
                  required={false}
                  size="4"
                  type="text"
                  value="2000"
                >
                  <input
                    aria-describedby="00000000-0000-0000-0000-000000000000-description terra-date-input-field-description-error-00000000-0000-0000-0000-000000000000"
                    aria-disabled={false}
                    aria-invalid={false}
                    aria-labelledby="00000000-0000-0000-0000-000000000000-label"
                    autoComplete="off"
                    className="form-input clinical-lowlight-theme date-input-year"
                    disabled={false}
                    maxLength="4"
                    name="terra-date-year-date-input-value"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onPaste={[Function]}
                    pattern="\\\\d*"
                    required={false}
                    size="4"
                    type="text"
                    value="2000"
                  />
                </Input>
                <VisuallyHiddenText
                  aria-live="off"
                  id="00000000-0000-0000-0000-000000000000-description"
                  text="Terra.date.input.yearDescription, Terra.date.input.hotKey"
                >
                  <span
                    aria-live="off"
                    className="visually-hidden-text"
                    id="00000000-0000-0000-0000-000000000000-description"
                  >
                    Terra.date.input.yearDescription, Terra.date.input.hotKey
                  </span>
                </VisuallyHiddenText>
              </AccessibleInput>
            </div>
          </DateInput>
        </InjectIntl(DateInput)>
        <div
          aria-hidden={true}
          className="help-text"
        >
          (Terra.date.input.formatMonthDayYear)
        </div>
      </fieldset>
    </DateInputField>
  </InjectIntl(DateInputField)>
</ThemeContextProvider>
`;
